Add much needed indexes to AuditEvents table (#2741)
* Add much needed indexes to AuditEvents table

The table lacked important indexes and made any search or list terribly slow to the point that the debugging page will time out in preprod.

Made order consistent with other places by using `published_at`.

* Add composite index

* Kinda reverting changes and using created_at

Removed updated_at and published_at as redundant.

* Fix tests
