# public/openapi.yml
@@ -131,23 +131,17 @@ components:
                 type: object
                 required:
                 - tags
-                - publishedAt
                 - systemEvent
                 - createdAt
-                - updatedAt
                 properties:
                   tags:
                     type: array
                     items:
                       type: string
-                  publishedAt:
-                    type: string
                   systemEvent:
                     type: boolean
                     nullable: true
                   createdAt:
-                    type: string
-                  updatedAt:
                     type: string
             calculatedEarlyAllocationStatus:
               type: object
